[package]
name = "titan"
version = "0.1.0"
authors = ["Matt Keeter <matt.j.keeter@gmail.com>"]
edition = "2018"

[dependencies.anyhow]
version = "1.0.32"

[dependencies.directories]
version = "3.0.1"

[dependencies.nom]
version = "5.1.2"

[dependencies.rustls]
version = "0.18.1"
features = ["dangerous_configuration"]

[dependencies.sled]
version = "0.34.3"

[dependencies.url]
version = "2.1.1"

[dependencies.webpki]
version = "0.21.3"
