[package]
name = "silo"
version = "0.1.0"
authors = ["Matt Keeter <matt.j.keeter@gmail.com>"]
edition = "2018"

[dependencies.nom]
version = "6.1.2"

[dependencies.ouroboros]
version = "0.8.3"

[dependencies.rustls]
version = "0.18.1"
features = ["dangerous_configuration"]

[dependencies.stable_deref_trait]
version = "*"

[dependencies.sled]
version = "0.34.3"

[dependencies.thiserror]
version = "1.0"

[dependencies.url]
version = "2.1.1"

[dependencies.webpki]
version = "0.21.3"
